fix opacity on body and scrolling white space on bottom of page

--- a/css/main.css
+++ b/css/main.css
@@ -55,14 +55,11 @@ table {
 /*********** end of reset **********/
 body {
   color: #000;
-}
-
-body::after {
-  content: "";
-  background: no-repeat url("../imgs/mtn.jpg") black;
+  background: url("../imgs/mtn.jpg") black;
   background-size: cover;
-  opacity: 0.75;
-  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  /* opacity: 0.75; */
   top: 0;
   left: 0;
   bottom: 0;
@@ -70,6 +67,26 @@ body::after {
   position: absolute;
   z-index: -1;   
 }
+
+.page-wrapper{
+  background: rgba(249, 250, 250, 0.37);
+  height: 100%;
+  widows: 100%;
+}
+/* body::after {
+  content: "";
+  background: url("../imgs/mtn.jpg") black;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  opacity: 0.75;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;   
+} */
 
 h2{
   font-size: 1.2em;
